--- a/index.html
+++ b/index.html
@@ -13,51 +13,61 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.0.0/modern-normalize.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.0.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- HEADER -->
-    <heaclass="page-headerder">
-      <nav class="page-nav">
-        <a class="logo list link" href="./index.html"
-          >WEB<span class="list link logo-dark">STUDIO</span></a>
-        <ul class="menu list">
-          <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="#Contacts">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="adress">
-        <ul class="navigation-contact link list ">
-          <li>
-            <a class="adress-link link list" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="adress-link link list" href="tel:+11(000)111-11-11"
-              >+11 (000)111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </heaclass=>
+    <header class="page-header">
+      <div class="container page-header-container">
+        <nav class="page-nav">
+          <a class="logo list link" href="./index.html"
+            >WEB<span class="list link logo-dark">STUDIO</span></a
+          >
+          <ul class="menu list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="#Contacts">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="navigation-contact link list">
+            <li class="adress-item">
+              <a class="adress-link link list" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-item">
+              <a class="adress-link link list" href="tel:+11(000)111-11-11"
+                >+11 (000)111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
     <main>
       <!-- SECTION 1 -->
       <section class="hero">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="modal-btn" type="button">Order service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="modal-btn" type="button">Order service</button>
+        </div>
       </section>
-      <section>
+
+      <section class="section">
         <!-- SECTION 2 -->
-        <h2 class="visually-hidden">Our features</h2>
+        <div class="container">
+          <h2 class="visually-hidden">Our features</h2>
         <ul class="feature-list link list">
           <li>
             <h3 class="feature-title">Strategy</h3>
@@ -88,10 +98,12 @@
             </p>
           </li>
         </ul>
-      </section>
+        </div>
+        </section>
       <section class="section-three">
         <!-- SECTION 3 -->
-        <h2 class="section-title">What Are We Doing</h2>
+        <div class="container">
+          <h2 class="section-title section-work">What Are We Doing</h2>
         <ul class="work-img link list">
           <li>
             <img
@@ -119,9 +131,10 @@
           </li>
         </ul>
       </section>
-      <section class="section-four">
+      <section class="section-four section">
         <!-- SECTION 4 -->
-        <h2 class="section-title">Our team</h2>
+        <div class="container">
+          <h2 class="section-title">Our team</h2>
         <ul class="team-list link list">
           <li class="team-list-item">
             <img
@@ -130,8 +143,10 @@
               width="264"
               height="260"
             />
+            <div class="team-list-item-wrapper">
             <h3 class="card-description">Mark Guerrero</h3>
             <p class="desc">Product Designer</p>
+            </div>  
           </li>
           <li class="team-list-item">
             <img
@@ -140,8 +155,10 @@
               width="264"
               height="260"
             />
+            <div class="team-list-item-wrapper">
             <h3 class="card-description">Tom Ford</h3>
             <p class="desc">Frontend Developer</p>
+            </div> 
           </li>
           <li class="team-list-item">
             <img
@@ -150,8 +167,10 @@
               width="264"
               height="260"
             />
-            <h3 class="card-description">Camila Garcia</h3>
+            <div class="team-list-item-wrapper">
+               <h3 class="card-description">Camila Garcia</h3>
             <p class="desc">Marketing</p>
+            </div>           
           </li>
           <li class="team-list-item">
             <img
@@ -160,21 +179,28 @@
               width="264"
               height="260"
             />
-            <h3 class="card-description">Daniel Wilson</h3>
+            <div class="team-list-item-wrapper">
+              <h3 class="card-description">Daniel Wilson</h3>
             <p class="desc">UI Designer</p>
+            </div>           
           </li>
-        </ul>
+        </ul> 
+      </div>
       </section>
     </main>
     <footer class="footer">
       <!-- FOOTER -->
-      <a class="logo list link" href="./index.html"
-        >WEB<span class="list link logo-light">STUDIO</span></a
-      >
+      <div class="container">
+        <div class="logo-footer">
+          <a class="logo list link" href="./index.html"
+        >WEB<span class="list link logo-light">STUDIO</span></a>
+      </div>
+        
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
