--- a/portfolio.html
+++ b/portfolio.html
@@ -13,156 +13,196 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.0.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header class="page-header">
-      <nav class="page-nav">
-        <a class="logo list link" href="./index.html"
-          >WEB<span class="logo-half list link logo-dark">STUDIO</span></a
-        >
-        <ul class="menu list">
-          <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="#Contacts">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="adress">
-        <ul class="navigation-contact link list">
-          <li>
-            <a class="adress-link link list" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="adress-link link list" href="tel:+11(000)111-11-11"
-              >+11 (000)111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container page-header-container">
+        <nav class="page-nav">
+          <a class="logo list link" href="./index.html"
+            >WEB<span class="logo-half list link logo-dark">STUDIO</span></a
+          >
+          <ul class="menu list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="#Contacts">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="navigation-contact link list">
+            <li class="adress-item">
+              <a class="adress-link link list" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-item">
+              <a class="adress-link link list" href="tel:+11(000)111-11-11"
+                >+11 (000)111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- SECTION 1 -->
       <section class="hero_2">
-        <h1 class="visually-hidden">Our buttons</h1>
-        <ul class="button-list list link">
-          <li><button class="buttons" type="button">All</button></li>
-          <li><button class="buttons" type="button">Web Site</button></li>
-          <li><button class="buttons" type="button">App</button></li>
-          <li><button class="buttons" type="button">Design</button></li>
-          <li><button class="buttons" type="button">Marketing</button></li>
-        </ul>
-        <ul class="link list">
-          <li>
-            <img
-              src="./images/images_02/interface_concept.jpg"
-              alt="the app interface"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Banking App Interface Concept</h2>
-            <p class="desc">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/cashment_payment.jpg"
-              alt="payment by phone"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Cashless Payment</h2>
-            <p class="desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/meditation_app.jpg"
-              alt="the laptop and phone"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Meditaion App</h2>
-            <p class="desc">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/taxi_services.jpg"
-              alt="the phone in the car"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Taxi Service</h2>
-            <p class="desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/screen_illustrations.jpg"
-              alt="phone screen"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Screen Illustrations</h2>
-            <p class="desc">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/online_cources.jpg"
-              alt="the smilling girl with phone"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Online Courses</h2>
-            <p class="desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/instagram_stories.jpg"
-              alt="stories image"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Instagram Stories Concept</h2>
-            <p class="desc">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/organic_food.jpg"
-              alt="the bag full of food"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Organic Food</h2>
-            <p class="desc">Web Site</p>
-          </li>
-          <li>
-            <img
-              src="./images/images_02/coffee.jpg"
-              alt="the barmen making the coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="card-description">Fresh Coffee</h2>
-            <p class="desc">Web Site</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">Our buttons</h1>
+          <ul class="button-list list link">
+            <li><button class="buttons" type="button">All</button></li>
+            <li><button class="buttons" type="button">Web Site</button></li>
+            <li><button class="buttons" type="button">App</button></li>
+            <li><button class="buttons" type="button">Design</button></li>
+            <li><button class="buttons" type="button">Marketing</button></li>
+          </ul>
+
+          <!-- CONTENT -->
+          <ul class="link list">
+            <div class="content first-line">
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/interface_concept.jpg"
+                  alt="the app interface"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="desc">App</p>
+                </div>
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/cashment_payment.jpg"
+                  alt="payment by phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Cashless Payment</h2>
+                  <p class="desc">Marketing</p>
+                </div>
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/meditation_app.jpg"
+                  alt="the laptop and phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Meditaion App</h2>
+                  <p class="desc">App</p>
+                </div>
+              </li>
+            </div>
+            <div class="content second-line">
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/taxi_services.jpg"
+                  alt="the phone in the car"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Taxi Service</h2>
+                  <p class="desc">Marketing</p>
+                </div>
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/screen_illustrations.jpg"
+                  alt="phone screen"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Screen Illustrations</h2>
+                  <p class="desc">Design</p>
+                </div>
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/online_cources.jpg"
+                  alt="the smilling girl with phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Online Courses</h2>
+                  <p class="desc">Marketing</p>
+                </div>
+              </li>
+            </div>
+            <div class="content third-line">
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/instagram_stories.jpg"
+                  alt="stories image"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Instagram Stories Concept</h2>
+                  <p class="desc">Design</p>
+                </div>
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/organic_food.jpg"
+                  alt="the bag full of food"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Organic Food</h2>
+                  <p class="desc">Web Site</p>
+                </div>
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="./images/images_02/coffee.jpg"
+                  alt="the barmen making the coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="content-item-list-wrapper">
+                  <h2 class="card-description">Fresh Coffee</h2>
+                  <p class="desc">Web Site</p>
+                </div>
+              </li>
+            </div>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
       <!-- FOOTER -->
-      <a class="logo list link" href="./index.html"
-        >WEB<span class="list link logo-light">STUDIO</span></a
-      >
-      <p class="footer-description">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="logo-footer">
+          <a class="logo list link" href="./index.html"
+            >WEB<span class="list link logo-light">STUDIO</span></a
+          >
+        </div>
+        <p class="footer-description">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
