--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
               >
             </li>
             <li class="adress-item">
-              <a class="adress-link link list" href="tel:+11(000)111-11-11"
-                >+11 (000)111-11-11</a
-              >
+              <a class="adress-link link list" href="tel:+11(000)111-11-11">+11 (000)111-11-11</a
+       >
             </li>
           </ul>
         </address>
